# discrete-elastic-rods

./: .clangd  .gitignore  .gitmodules  .polyscope.ini  CMakeLists.txt  DER_jax_mat.py  README.md  elasticRods.m  imgui.ini
.cache/clangd/index/: Curve.h.EC57EA3348F33100.idx  MC.h.AF560BD6C905B7F0.idx  _fixes.hpp.352CFF16934DB6E1.idx  _vectorize.hpp.C40DF7E441EF47CD.idx  affine_remapper.h.F5457513B0C8C943.idx  affine_remapper.ipp.9FF06CBABA19A42E.idx  barycentric_coordinate_helpers.h.A3B6485517A178F6.idx  barycentric_coordinate_helpers.ipp.015CC21A33A9A2AA.idx  base_geometry_interface.cpp.67C18BDBC6EA8DEB.idx  base_geometry_interface.h.9898550D8BA4406A.idx  bindata_candy.cpp.3E9FE326972E913E.idx  bindata_ceramic.cpp.256C23FF0BE7F953.idx  bindata_clay.cpp.26500952EC5DB11D.idx  bindata_flat.cpp.B343C785A724C46B.idx  bindata_font_cousine_regular.cpp.788DB027812E47C4.idx  bindata_font_lato_regular.cpp.D91DBDDC0BA01F5C.idx  bindata_jade.cpp.959012D796EB4C90.idx  bindata_mud.cpp.01FD3C7EC96B7C9F.idx  bindata_normal.cpp.F10DA008AF94090E.idx  bindata_wax.cpp.531FBDD7FBFF2A92.idx  boundary_first_flattening.cpp.68778A919E0EEBB4.idx  boundary_first_flattening.h.7F05D9A6CDE767F1.idx  camera_parameters.cpp.6438E21EB5F0B9CE.idx  camera_parameters.h.94692A790978663D.idx  camera_parameters.ipp.17D8A8354B8EB8D3.idx  camera_view.cpp.06F4C6F21DDB6E5E.idx  camera_view.h.ACE1E38BE844B923.idx  camera_view.ipp.F471DB8F3FE4C617.idx  cocoa_init.m.2E7DD2D393EF380C.idx  cocoa_joystick.h.C5E1840E5DAE46FF.idx  cocoa_joystick.m.5149D33038DD48EB.idx  cocoa_monitor.m.B6C4AC243233B7C2.idx  cocoa_platform.h.8BDF8097044AA3E0.idx  cocoa_time.c.10C975C25F59EE2C.idx  cocoa_window.m.3AC31CDCCDB0905E.idx  color_image_quantity.cpp.B7BCF194F6F4F053.idx  color_image_quantity.h.13835B5F320C448B.idx  color_management.cpp.1676B72B80684C14.idx  color_management.h.A19E1308BF8E9402.idx  color_maps.cpp.CC56368DDC547B86.idx  (+593 more)
examples/demo-app/: BezierCurve.h  demo_app.cpp
include/polyscope/: polyscope.h
include/polyscope/render/: engine.h
mid-presentation/: bishop.mov  index.html  template.html  tst.md
src/: BezierCurve.h  file_helpers.cpp  imgui_config.cpp  main.cpp  polyscope.cpp
src/include/: Curve.cpp  Curve.h  CurveEigen.h  Curvenew.h  Curveoop.h  Curvesuitesparse.h  abc.txt  curvenew.h
src/render/: engine.cpp  ground_plane.cpp
src/render/mock_opengl/: mock_gl_engine.cpp
src/render/opengl/: gl_engine.cpp
srcnew/: main.cpp
